--- a/exercice3/exercice.html
+++ b/exercice3/exercice.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>JS-Jquery Selecteurs</title>
 </head>
+
 <body>
     <h2 class="test">This is a heading</h2>
 
     <p class="test">This is a paragraph.</p>
     <p>This is another paragraph.</p>
 
-
+    <script src="JQuery.js"></script>
     <script src="exercice3.js"></script>
 </body>
 </html>
