--- a/exercice4/exercice.html
+++ b/exercice4/exercice.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>JS-Jquery Selecteurs</title>
 </head>
+
 <body>
     <h1>This is a heading</h1>
     <h2>This is another heading</h2>
@@ -14,7 +15,7 @@
     <div>This is a div element.</div>
     <button>This is a button</button>
 
-
+    <script src="JQuery.js"></script>
     <script src="exercice4.js"></script>
 </body>
 </html>
