--- a/exercice1/exercice1.html
+++ b/exercice1/exercice1.html
@@ -11,7 +11,7 @@
     <p>C'est un paragraphe.</p>
     <p>C'est un autre paragraphe.</p>
 
-
+    <script src="JQuery.js"></script>
     <script src="exercice1.js"></script>
 </body>
 </html>
