--- a/exercice2/exercice.html
+++ b/exercice2/exercice.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>JS-Jquery Selecteurs</title>
 </head>
+
 <body>
     <p>This is a paragraph.</p>
     <p id="test">This is a paragraph with id="test".</p>
 
+    <script src="JQuery.js"></script>
     <script src="exercice2.js"></script>
 </body>
 </html>
